# automated-sudoku

./: README.md  pyproject.toml
src/: sudoku.py
test/: test_example.py
